Se agregaron las primeras definiciones

--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
     <title>TemarioPE</title>
 </head>
 <body>
-    
+    <h1>Tema 1: Estadística descriptiva</h1>
+    <div>
+        <table>
+            <tr>
+                <th style="width: 30%;">Subtema</th>
+                <th>Descripción</th>
+            </tr>
+            <tr>
+                <td>1.1 Conceptos básicos de estadística</td>
+                <td>
+                    En este tema se introducen los fundamentos de la estadística, incluyendo su definición y su importancia en la toma de decisiones. Se explora la teoría de decisión, que ofrece métodos para tomar decisiones basadas en probabilidades. Además, se definen conceptos como población (el conjunto completo de elementos bajo estudio), muestra aleatoria (un subconjunto representativo de la población) y parámetros aleatorios (valores desconocidos que describen la población).
+                </td>
+            </tr>
+            <tr>
+                <td>1.2 Descripción de datos</td>
+                <td>
+                    Este tema se centra en cómo describir y resumir conjuntos de datos. Se diferencia entre datos agrupados y no agrupados, se introduce el concepto de frecuencia de clase y se explican medidas como la frecuencia relativa, el punto medio y los límites de intervalos en datos agrupados.
+                </td>
+            </tr>
+            <tr>
+                <td>1.3 Medidas de tendencia central</td>
+                <td>
+                    Aquí se exploran las medidas que resumen la ubicación central de un conjunto de datos. Se incluyen la media aritmética, geométrica y ponderada, que representan el valor promedio de los datos. También se estudian la mediana (el valor medio), la moda (el valor más frecuente) y las medidas de dispersión, como la varianza, la desviación estándar y otras, que muestran la dispersión de los datos respecto a la medida central.
+                </td>
+            </tr>
+            <tr>
+                <td>1.4 Parámetros para datos agrupados</td>
+                <td>
+                    Este tema se centra en los métodos para calcular parámetros estadísticos, como la media y la varianza, cuando los datos están agrupados en intervalos en lugar de ser valores individuales. Esto es importante porque muchos conjuntos de datos son demasiado grandes para analizar cada valor individualmente, por lo que se agrupan en intervalos para facilitar su análisis.
+                </td>
+            </tr>
+            <tr>
+                <td>1.5 Distribución de frecuencias</td>
+                <td>
+                    Aquí se aborda cómo organizar los datos en categorías o intervalos y contar cuántas observaciones caen en cada categoría. La distribución de frecuencias proporciona una forma clara de comprender la distribución de los datos y es fundamental para calcular estadísticas descriptivas y hacer inferencias sobre la población a partir de una muestra.
+                </td>
+            </tr>
+            <tr>
+                <td>1.6 Técnicas de agrupación de datos</td>
+                <td>
+                    Se exploran los métodos para agrupar datos en intervalos o categorías de manera significativa y útil. Esto puede incluir el uso de reglas específicas para determinar el ancho de los intervalos y garantizar que la agrupación refleje adecuadamente la distribución de los datos.
+                </td>
+            </tr>
+            <tr>
+                <td>1.7 Técnicas de muestreo</td>
+                <td>En este tema se examinan los diferentes métodos para seleccionar una muestra representativa de una población más grande. Estas técnicas son cruciales para garantizar que la muestra captura adecuadamente la variabilidad y características de la población, lo que permite hacer inferencias precisas sobre la población a partir de la muestra seleccionada.</td>
+            </tr>
+        </table>
+    </div>
 </body>
 </html>
