Se modifico la tabla

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <title>TemarioPE</title>
 </head>
 <body>
-    <h1>Tema 1: Estadística descriptiva</h1>
     <div>
-        <table>
+        <table style="width: 80vw; margin: auto;">
+            <tr>
+                <th colspan="2">
+                    <h4>Tema 1: Estadística descriptiva</h4>
+                </th>
+            </tr>
             <tr>
                 <th style="width: 30%;">Subtema</th>
                 <th>Descripción</th>
@@ -16,13 +20,14 @@
             <tr>
                 <td>1.1 Conceptos básicos de estadística</td>
                 <td>
-                    En este tema se introducen los fundamentos de la estadística, incluyendo su definición y su importancia en la toma de decisiones. Se explora la teoría de decisión, que ofrece métodos para tomar decisiones basadas en probabilidades. Además, se definen conceptos como población (el conjunto completo de elementos bajo estudio), muestra aleatoria (un subconjunto representativo de la población) y parámetros aleatorios (valores desconocidos que describen la población).
+                    En el desarrollo de este tema se introducen los fundamentos de la estadística, incluyendo su definición y su importancia en la toma de decisiones. <br>
+                    Se explora la teoría de decisión, que ofrece métodos para tomar decisiones basadas en probabilidades. Además, se definen conceptos como población (el conjunto completo de elementos bajo estudio), muestra aleatoria (un subconjunto representativo de la población) y parámetros aleatorios (valores desconocidos que describen la población).
                 </td>
             </tr>
             <tr>
                 <td>1.2 Descripción de datos</td>
                 <td>
-                    Este tema se centra en cómo describir y resumir conjuntos de datos. Se diferencia entre datos agrupados y no agrupados, se introduce el concepto de frecuencia de clase y se explican medidas como la frecuencia relativa, el punto medio y los límites de intervalos en datos agrupados.
+                    Para este tema se centra en cómo describir y resumir conjuntos de datos. Se diferencia entre datos agrupados y no agrupados, se introduce el concepto de frecuencia de clase y se explican medidas como la frecuencia relativa, el punto medio y los límites de intervalos en datos agrupados.
                 </td>
             </tr>
             <tr>
