Se modificaron las primeras definiciones

--- a/index.html
+++ b/index.html
@@ -4,36 +4,61 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TemarioPE</title>
+    <style>
+        body{
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+        th, td{
+            padding: 5px 10px;
+        }
+        table, table *{
+            border-radius: 20px;
+        }
+        tr:hover {
+            background-color: #f9f9f9;
+        }
+    </style>
 </head>
 <body>
     <div>
         <table style="width: 80vw; margin: auto;">
             <tr>
                 <th colspan="2">
-                    <h4>Tema 1: Estadística descriptiva</h4>
+                    <h3>Tema 1: Estadística descriptiva</h3>
                 </th>
             </tr>
             <tr>
                 <th style="width: 30%;">Subtema</th>
-                <th>Descripción</th>
+                <th>Definición</th>
             </tr>
             <tr>
                 <td>1.1 Conceptos básicos de estadística</td>
                 <td>
-                    En el desarrollo de este tema se introducen los fundamentos de la estadística, incluyendo su definición y su importancia en la toma de decisiones. <br>
-                    Se explora la teoría de decisión, que ofrece métodos para tomar decisiones basadas en probabilidades. Además, se definen conceptos como población (el conjunto completo de elementos bajo estudio), muestra aleatoria (un subconjunto representativo de la población) y parámetros aleatorios (valores desconocidos que describen la población).
+                    Definición: La estadística es la disciplina que se encarga de recopilar, organizar, analizar e interpretar datos para la toma de decisiones. <br>
+                    Teoría de decisión: Método estadístico para tomar decisiones considerando la incertidumbre y las probabilidades. <br>
+                    Población: Conjunto completo de elementos o individuos sujetos a estudio. <br>
+                    Muestra aleatoria: Subconjunto representativo de la población, seleccionado de manera que cada individuo tenga igual probabilidad de ser incluido. <br>
+                    Parámetros aleatorios: Valores desconocidos que describen características de una población. <br>
                 </td>
             </tr>
             <tr>
                 <td>1.2 Descripción de datos</td>
                 <td>
-                    Para este tema se centra en cómo describir y resumir conjuntos de datos. Se diferencia entre datos agrupados y no agrupados, se introduce el concepto de frecuencia de clase y se explican medidas como la frecuencia relativa, el punto medio y los límites de intervalos en datos agrupados.
+                    Datos agrupados y no agrupados: Los datos no agrupados son aquellos que se presentan individualmente, mientras que los datos agrupados están organizados en categorías o intervalos. <br>
+                    Frecuencia de clase: La frecuencia de clase es el número de veces que se observa un valor dentro de un intervalo particular en un conjunto de datos agrupados. <br>
+                    Frecuencia relativa: La frecuencia relativa es la proporción o porcentaje de veces que ocurre un valor dentro de un conjunto de datos. <br>
+                    Punto medio: El punto medio es el valor medio de un intervalo en datos agrupados. <br>
+                    Límites: Los límites son los valores extremos de un intervalo en datos agrupados. <br>
                 </td>
             </tr>
             <tr>
                 <td>1.3 Medidas de tendencia central</td>
                 <td>
-                    Aquí se exploran las medidas que resumen la ubicación central de un conjunto de datos. Se incluyen la media aritmética, geométrica y ponderada, que representan el valor promedio de los datos. También se estudian la mediana (el valor medio), la moda (el valor más frecuente) y las medidas de dispersión, como la varianza, la desviación estándar y otras, que muestran la dispersión de los datos respecto a la medida central.
+                    Media aritmética, geométrica y ponderada: Promedio de los datos. <br>
+                    Mediana: Valor central de un conjunto de datos ordenados. <br>
+                    Moda: Valor más frecuente en un conjunto de datos. <br>
+                    Medidas de dispersión: Indican la variabilidad de los datos respecto a una medida central. <br>
+                    Varianza, Desviación estándar, Desviación media, Desviación mediana, Rango: Medidas específicas de dispersión. <br>
                 </td>
             </tr>
             <tr>
@@ -45,7 +70,7 @@
             <tr>
                 <td>1.5 Distribución de frecuencias</td>
                 <td>
-                    Aquí se aborda cómo organizar los datos en categorías o intervalos y contar cuántas observaciones caen en cada categoría. La distribución de frecuencias proporciona una forma clara de comprender la distribución de los datos y es fundamental para calcular estadísticas descriptivas y hacer inferencias sobre la población a partir de una muestra.
+                    Se aborda cómo organizar los datos en categorías o intervalos y contar cuántas observaciones caen en cada categoría. La distribución de frecuencias proporciona una forma clara de comprender la distribución de los datos y es fundamental para calcular estadísticas descriptivas y hacer inferencias sobre la población a partir de una muestra.
                 </td>
             </tr>
             <tr>
