Se sgrego la definicion del subtema 1.8

--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
             </tr>
             <tr>
                 <td>1.7 Técnicas de muestreo</td>
-                <td>En este tema se examinan los diferentes métodos para seleccionar una muestra representativa de una población más grande. Estas técnicas son cruciales para garantizar que la muestra captura adecuadamente la variabilidad y características de la población, lo que permite hacer inferencias precisas sobre la población a partir de la muestra seleccionada.</td>
+                <td>En el desarrollo de este tema se examinan los diferentes métodos para seleccionar una muestra representativa de una población más grande. Estas técnicas son cruciales para garantizar que la muestra captura adecuadamente la variabilidad y características de la población, lo que permite hacer inferencias precisas sobre la población a partir de la muestra seleccionada.</td>
+            </tr>
+            <tr>
+                <td>1.8 Histogramas</td>
+                <td>
+                    1.8 Histogramas:
+   - Gráficos de barras que muestran la distribución de frecuencias de un conjunto de datos. Ayudan a visualizar la forma y dispersión de los datos, identificando patrones y tendencias. Son útiles para datos agrupados y continuos.
+                </td>
             </tr>
         </table>
     </div>
