Se modifico la definicion del subtema 1.8

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
                 <td>1.8 Histogramas</td>
                 <td>
                     1.8 Histogramas:
-   - Gráficos de barras que muestran la distribución de frecuencias de un conjunto de datos. Ayudan a visualizar la forma y dispersión de los datos, identificando patrones y tendencias. Son útiles para datos agrupados y continuos.
+                    Parecidos a los gráficos de barras, estos muestran la distribución de frecuencias de un conjunto de datos. <br>
+                    Ayudan a visualizar la forma y dispersión de los datos, identificando patrones y tendencias. Son útiles para datos agrupados y continuos.
                 </td>
             </tr>
         </table>
