Se modifico la definicion 1.2

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
             <tr>
                 <td>1.3 Medidas de tendencia central</td>
                 <td>
-                    Media aritmética, geométrica y ponderada: Promedio de los datos. <br>
+                    Media aritmética: Es el promedio comúnmente utilizado, obtenido sumando todos los valores y dividiendo esa suma por la cantidad de valores. <br>
+                    Media geométrica: Es el promedio obtenido multiplicando todos los valores y luego tomando la raíz n-ésima del producto, donde n es el número total de valores. <br>
+                    Media ponderada: Es un promedio donde cada valor tiene un peso asignado. Se calcula multiplicando cada valor por su respectivo peso, sumando estos productos y dividiendo por la suma de los pesos. <br>
                     Mediana: Valor central de un conjunto de datos ordenados. <br>
                     Moda: Valor más frecuente en un conjunto de datos. <br>
                     Medidas de dispersión: Indican la variabilidad de los datos respecto a una medida central. <br>
