Se modifico la definicion 1.3

--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
                     Mediana: Valor central de un conjunto de datos ordenados. <br>
                     Moda: Valor más frecuente en un conjunto de datos. <br>
                     Medidas de dispersión: Indican la variabilidad de los datos respecto a una medida central. <br>
-                    Varianza, Desviación estándar, Desviación media, Desviación mediana, Rango: Medidas específicas de dispersión. <br>
+                    Varianza: Es una medida de dispersión que indica cuánto se alejan los valores de una serie de datos de su media. Se calcula como el promedio de las diferencias al cuadrado entre cada dato y la media. <br>
+                    Desviación estándar: Es la raíz cuadrada de la varianza. Proporciona una medida de dispersión similar a la varianza, pero en la misma escala que los datos originales. <br>
+                    Desviación media: Es la media de las diferencias absolutas entre cada dato y la media. Proporciona una medida de dispersión que considera tanto los valores por encima como por debajo de la media. <br>
+                    Desviación mediana: Es la mediana de las diferencias absolutas entre cada dato y la mediana. Es menos sensible a valores extremos que la desviación media, lo que la hace útil en conjuntos de datos con valores atípicos. <br>
+                    Rango: Es la diferencia entre el valor máximo y el valor mínimo en un conjunto de datos. Es una medida simple de dispersión que puede proporcionar una idea general de la amplitud de los datos. <br>
                 </td>
             </tr>
             <tr>
