Se modifico estilo

--- a/index.html
+++ b/index.html
@@ -373,10 +373,7 @@
                     La desviación estándar es la raíz cuadrada de la varianza y proporciona una medida de dispersión en las mismas unidades que la variable original: <br>
                     <math>
                         <mrow>
-                          <mo>σ</mo>
-                          <sub>
-                            <mi>X</mi>
-                          </sub>
+                          <mo>σ<sub>X</sub></mo>
                           <mo>=</mo>
                           <msqrt>
                             <mrow>
@@ -393,13 +390,8 @@
                     La función de distribución acumulada (FDA) de una variable aleatoria discreta <i>X</i> es una función que da la probabilidad de que <i>X</i> tome un valor menor o igual a un valor dado <i>x</i>. Se define como: <br>
                     <math>
                         <mrow>
-                          <mi>F</mi>
-                          <sub>
-                            <mi>X</mi>
-                          </sub>
-                          <mo>(</mo>
-                          <mi>x</mi>
-                          <mo>)</mo>
+                          <mi>FX</mi>
+                          <mi>(x)</mi>
                           <mo>=</mo>
                           <mi>P</mi>
                           <mo>(</mo>
@@ -504,10 +496,7 @@
                     La varianza de una variable aleatoria continua <i>X</i> se define como: <br>
                     <math>
                         <mrow>
-                          <mo>Var</mo>
-                          <mo>(</mo>
-                          <mi>X</mi>
-                          <mo>)</mo>
+                          <mo>Var(X)</mo>
                           <mo>=</mo>
                           <msubsup>
                             <mo>∫</mo>
@@ -539,17 +528,11 @@
                     La desviación estándar es la raíz cuadrada de la varianza: <br>
                     <math>
                     <mrow>
-                        <mo>σ</mo>
-                        <sub>
-                        <mi>X</mi>
-                        </sub>
+                        <mo>σ<sub>X</sub></mo>
                         <mo>=</mo>
                         <msqrt>
                         <mrow>
-                            <mo>Var</mo>
-                            <mo>(</mo>
-                            <mi>X</mi>
-                            <mo>)</mo>
+                            <mo>Var(X)</mo>
                         </mrow>
                         </msqrt>
                     </mrow>
