--- a/index.html
+++ b/index.html
@@ -8,55 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@600&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Saira+Condensed:wght@500&display=swap" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/stix-two-math" rel="stylesheet">
-    <style>
-        body {
-            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-        i{
-            font-size: 1.15em;
-            font-weight: 500;
-            font-family: 'STIX Two Math', sans-serif;
-        }
-        math *{
-            font-weight: 500;
-            font-family: 'STIX Two Math', sans-serif;
-        }
-        th, td {
-            padding: 5px 10px;
-            border: 1px solid #ccc;
-        }
-        table {
-            border-collapse: collapse;
-            width: 100%;
-            margin: 0 auto;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
-            border-radius: 20px;
-            overflow: hidden;
-        }
-        tr:hover {
-            background-color: #e0e0e0;
-            transition: background-color 0.3s ease;
-        }
-        @keyframes fadeIn {
-            0% {
-                opacity: 0;
-            }
-            100% {
-                opacity: 1;
-            }
-        }
-        @keyframes slideIn {
-            0% {
-                transform: translateY(-100%);
-            }
-            100% {
-                transform: translateY(0);
-            }
-        }
-        th, td {
-            animation: fadeIn 0.5s ease, slideIn 0.5s ease;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
