--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
 <body>
     <div>
-        <table style="width: 90vw; margin: auto;">
-
+        <table>
             <!-- #####################################  TEMA 1 ##################################### -->
 
             <tr>
@@ -26,7 +25,7 @@
                 </th>
             </tr>
             <tr>
-                <th style="width: 30%;">Subtema</th>
+                <th class="subtema-height">Subtema</th>
                 <th>Definición</th>
             </tr>
             <tr>
@@ -135,7 +134,7 @@
                 </th>
             </tr>
             <tr>
-                <th style="width: 30%;">Subtema</th>
+                <th class="subtema-height">Subtema</th>
                 <th>Definición</th>
             </tr>
             <tr>
@@ -308,7 +307,7 @@
                 </th>
             </tr>
             <tr>
-                <th style="width: 30%;">Subtema</th>
+                <th class="subtema-height">Subtema</th>
                 <th>Definición</th>
             </tr>
             <tr>
@@ -494,7 +493,7 @@
                 </th>
             </tr>
             <tr>
-                <th style="width: 30%;">Subtema</th>
+                <th class="subtema-height">Subtema</th>
                 <th>Definición</th>
             </tr>
             <tr>
