--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div>
-        <table id="main-table">
+        <table id="main-table" style="width: 90%;">
             <!-- #####################################  TEMA 1 ##################################### -->
 
             <tr>
