--- a/index.html
+++ b/index.html
@@ -331,10 +331,12 @@
                         entre los posibles valores que puede tomar una variable aleatoria.
                         <br>
                         Las propiedades que debe cumplir una distribución de probabilidad son:
+                        <br>
+                        <center>
+                            <i style="font-size: 1.22em; font-weight: semi-bolt;">0 ≤ P(X<sub>i</sub>) ≤ 1</i>
+                        </center>
                     </p>
                     <div id="math-output">
-                        \( 0 \leq P(X_i) \leq 1 \)
-                        <br><br>
                         \( \sum_{i=1}^{N} P(X_i) = 1 \)
                     </div>
                 </td>
